[tool.poetry]
name = "tradingview-access-management"
version = "0.1.0"
description = "REST API for managing TradingView script access"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Flask = "^3.0.0"
urllib3 = "^2.2.0"
requests = "^2.31.0"
python-dateutil = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"